[workspace]
members = [
  "async",
  "async_router",
  "blockchain",
  "crypto",
  "fs",
  "graphviz",
  "graphql_intro",
  "hello_world",
  "helloworld-tonic",
  "ipfs",
  "mina-indexer-block-util",
  "peano",
  "petgraph",
  "practice",
  "process",
  "program-output-normalizer",
  "rbe",
  "tree",
  "voting-tonic",
]

resolver = "2"
